[project]
name = "archive-org-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "curl-cffi>=0.14.0",
    "img2pdf>=0.6.3",
    "playwright>=1.58.0",
    "pycryptodome>=3.23.0",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]
